--- a/userService/docker-compose.yml
+++ b/userService/docker-compose.yml
@@ -28,3 +28,12 @@ services:
     depends_on:
       - user-db
 
+  user-front:
+    build:
+      context: ./frontendUser/
+      dockerfile: front.Dockerfile
+    ports:
+      - 3001:3001
+    depends_on:
+      - user-back
+
