--- a/userService/docker-compose.yml
+++ b/userService/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       dockerfile: front.Dockerfile
     ports:
       - 3001:3001
+    expose:
+      - 3001
     depends_on:
       - user-back
-
