--- a/vacationService/docker-compose.yml
+++ b/vacationService/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       dockerfile: front.Dockerfile
     ports:
       - 3002:3002
+    expose:
+      - 3002
     depends_on:
       - vacation-back
-
-
